pushed the patched sensible-browser files so quilt's state is correct

--- a/libbase/gnashrc.in
+++ b/libbase/gnashrc.in
@@ -175,7 +175,7 @@
 # NOTE that the NPAPI plugin provides an host request FD
 # to send url opening requests to.
 #
-# Default: xdg-open '%u'
+# Default: sensible-browser '%u'
 #
 #set urlOpenerFormat lynx '%u'
 
